first mostly working mcmc protocol

--- a/reweighting/protocols.conf
+++ b/reweighting/protocols.conf
@@ -2,4 +2,5 @@
 Protocols SPA = [
 	{"tag": "section", "text": "Ensemble Reweighting", "openItem": "False", "children": [
 		{"tag": "protocol", "value": "ReweightingImageDistancesProtocol", "text": "Calculate Image Distances"},
+		{"tag": "protocol", "value": "ReweightingEstimateWeightsProtocol", "text": "Estimate Weights"}
 	]}]
