full reweighting protocol

--- a/reweighting/protocols.conf
+++ b/reweighting/protocols.conf
@@ -1,6 +1,5 @@
 [PROTOCOLS]
 Protocols SPA = [
 	{"tag": "section", "text": "Ensemble Reweighting", "openItem": "False", "children": [
-		{"tag": "protocol", "value": "ReweightingImageDistancesProtocol", "text": "Calculate Image Distances"},
-		{"tag": "protocol", "value": "ReweightingEstimateWeightsProtocol", "text": "Estimate Weights"}
+		{"tag": "protocol", "value": "ReweightingEstimateWeightsProtocol", "text": "Reweight ensemble"}
 	]}]
